web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-strict-array-pattern/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,17)
1|"use strict"; ([yield] = x)
 |               ^
[SyntaxError]: unexpect keyword in strict mode (1,17)
1|"use strict"; ([yield] = x)
 |               ^
